[gd_scene load_steps=6 format=3 uid="uid://t3lyrleevaoo"]

[ext_resource type="Script" path="res://functions/entidades/jogador/jogador.gd" id="1_ur6my"]
[ext_resource type="Script" path="res://assets/Classes/Status/Entidade.gd" id="2_2dlgg"]
[ext_resource type="Script" path="res://functions/inventario/sistema/PlayerInventario.gd" id="3_et6pk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dm3eb"]
size = Vector2(64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yimkn"]

[node name="Jogador" type="CharacterBody2D"]
script = ExtResource("1_ur6my")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dm3eb")

[node name="Animated2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yimkn")

[node name="Entidade" type="Node" parent="."]
script = ExtResource("2_2dlgg")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_et6pk")

[connection signal="Morreu" from="Entidade" to="." method="_on_entidade_morreu"]
[connection signal="SeCurou" from="Entidade" to="." method="_on_entidade_se_curou"]
[connection signal="TomouDano" from="Entidade" to="." method="_on_entidade_tomou_dano"]
